[project]
name = "valkey-flash-tests"
version = "0"
requires-python = ">=3.11"
dependencies = [
    "valkey==6.1.1",
    "pytest==7.4.3",
    "python-on-whales==0.81.0",
]

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests/build", "target", ".venv-coverage"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "E501"]  # tests allowance

[tool.ruff.format]
quote-style = "double"
