[project]
name = "valkey-flash-tests"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "valkey>=6.1,<7",
    "pytest>=8,<10",
    "python-on-whales>=0.81,<1",
]

[dependency-groups]
dev = ["ruff>=0.15,<1"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests/build", "target", ".venv-coverage"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "PL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "E501"]
"scripts/**/*.py" = ["PLR0912", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
